--- a/deliverables/meeting-minutes/02-01-24.md
+++ b/deliverables/meeting-minutes/02-01-24.md
@@ -10,7 +10,7 @@
 ## Decisions Made
 - The Dart programming language will be used with the Flutter SDK to build to iOS and Android.
 - The project requirements were decided on.
-- The App name will be “Common Cent$”
+- The App name will be “Common Cent$.”
 - The App design was discussed but not decided.
 
 ## Action Items
@@ -20,4 +20,4 @@
 ###  Next week
 - we should decide which members will work on which component.
 - A software development plan should be created with a complete timeline to ensure the project is done by the end of the semester.
-- We will decide how we can use Flutter for our app creation 
+- We will decide how we can use Flutter for our app creation.
