Update 02-06-24.md: VT

--- a/deliverables/meeting-minutes/02-06-24.md
+++ b/deliverables/meeting-minutes/02-06-24.md
@@ -6,6 +6,7 @@
 - Hana Tollossa
 - Jahcorian Ivery
 - Varshitha Thanam
+  
 ## Decisions Made
 - The App name will be “Common Cent$.”
 - App logo had been discussed.
@@ -20,4 +21,5 @@
 - We will decide how we can use Flutter for our app creation.
 
 ## Signatures
--Hana Tollossa
+- Hana Tollossa
+- Varshitha Thanam
