--- a/deliverables/meeting-minutes/02-06-24.md
+++ b/deliverables/meeting-minutes/02-06-24.md
@@ -1,4 +1,4 @@
-# Thursday, February 06, 2024
+# Tuesday, February 06, 2024
 ## Time
 - 12:00 pm - 12:20 pm
 ## Attendees/Role
@@ -23,3 +23,4 @@
 ## Signatures
 - Hana Tollossa
 - Varshitha Thanam
+- Ethan Timpe
