--- a/deliverables/meeting-minutes/02-08-24.md
+++ b/deliverables/meeting-minutes/02-08-24.md
@@ -22,7 +22,7 @@
 
 ## Action Items 
 
-- Bring your design idea using Flutter. 
+- We should bring our design idea using Flutter. 
 
 ## Questions or Concerns 
 
