--- a/deliverables/meeting-minutes/02-15-24.md
+++ b/deliverables/meeting-minutes/02-15-24.md
@@ -7,12 +7,10 @@
 ## Attendees/Role  
 
 - Ethan Timpe  
-
 - Alexander Hooper 
-
 - Hana Tollossa  
-
-- Jahcorian Ivery   
+- Jahcorian Ivery
+- Varshitha Thanam  
 
 ## Decisions Made   
 
@@ -29,9 +27,7 @@
 
 ### Next meeting  
 
-- We will finalize our software development plan. 
-
-- We will be being our design ideas. 
+- We will be presenting our design ideas. 
 
  
 
