--- a/deliverables/meeting-minutes/02-20-24.md
+++ b/deliverables/meeting-minutes/02-20-24.md
@@ -14,7 +14,7 @@
 
 ## Decisions Made   
 
-- We descuss about our design plan.
+- We discuss our design plan.
 
 ## Action Items  
 
@@ -26,7 +26,7 @@
 
 ### Next meeting  
 
-- We will be presenting our design . 
+- We will be presenting Sketches of each page.
 
  
 
