--- a/deliverables/meeting-minutes/02-01-24.md
+++ b/deliverables/meeting-minutes/02-01-24.md
@@ -23,6 +23,7 @@
 - We will decide how we can use Flutter for our app creation.
 
 ## Signatures
+- Hana Tollossa
 - Ethan Timpe
 - Varshitha Thanam
 - JahCorian Ivery
