--- a/deliverables/meeting-minutes/03-04-24.md
+++ b/deliverables/meeting-minutes/03-04-24.md
@@ -8,13 +8,12 @@
 - Jahcorian Ivery
 - Varshitha Thanam
 ## Decisions Made
-- We discuss the disign requirnments.
-- We layout our app functionallity
-- We duscuss how far everyone is in thier part of the app code.
+- We discuss the design requirements.
+- We layout our app functionality
+- We discuss how far everyone is in their part of the app code.
 ## Action Items
-- All members should download and familiarize themselves with Android Studio and Flutter SDK.
+- All members should keep working on the code part of the app.
+- All members should keep working on the design requirnment  of the app
 ## Questions or Concerns
-- Next week we should decide which members will work on which component.
-- What will the app be named?
-- A software development plan should be created with a complete timeline to ensure the project is done by the end of the semester.
+
   
