--- a/deliverables/meeting-minutes/03-04-24.md
+++ b/deliverables/meeting-minutes/03-04-24.md
@@ -1,6 +1,6 @@
 # Tuesday, March 4th, 2024
 ## Time
-- 11:40am - 12:20pm
+- 11:20 am - 12:00 pm
 ## Attendees/Role
 - Alexander Hooper
 - Ethan Timpe
@@ -13,7 +13,11 @@
 - We discuss how far everyone is in their part of the app code.
 ## Action Items
 - All members should keep working on the code part of the app.
-- All members should keep working on the design requirnment  of the app
+- All members should keep working on the design requirements of the app.
+- We should review the requirements.
 ## Questions or Concerns
+
+## Signatures  
+Hana Tollossa
 
   
