--- a/deliverables/meeting-minutes/03-07-24.md
+++ b/deliverables/meeting-minutes/03-07-24.md
@@ -16,8 +16,6 @@
 ## Questions or Concerns
 
 ## Signatures  
-Hana Tollossa
-Varshitha Thanam
-
-
-  
+- Hana Tollossa
+- Varshitha Thanam
+- Ethan Timpe
