--- a/deliverables/meeting-minutes/03-28-24.md
+++ b/deliverables/meeting-minutes/03-28-24.md
@@ -8,11 +8,12 @@
 - Varshitha Thanam
 ## Decisions Made
 - We discuss how far everyone is in their part of the app code.
-- We discuss how our Powerpoint presentation will be organized.
-- We discuss how we will integrate our code on github and when is it due.
+- We discuss how our PowerPoint presentation will be organized.
+- We discuss how to integrate our code on GitHub and when it is due.
 ## Action Items
-- WE should meet 4/3 to finalize our Powrpoint presentation.
+- We should meet on 4/3 to finalize our PowerPoint presentation.
 - We should review our product.
+- We should review our SDP to meet our final product.
 ## Questions or Concerns
 
 ## Signatures  
