--- a/deliverables/meeting-minutes/04-04-24.md
+++ b/deliverables/meeting-minutes/04-04-24.md
@@ -3,18 +3,26 @@
 - 12:00 pm - 12:20 pm
 ## Attendees/Role
 - Alexander Hooper
+- Ethan Timpe
 - Hana Tollossa
 - Jahcorian Ivery
 - Varshitha Thanam
 ## Decisions Made
-- We  finalize our PowerPoint presentation.
-- We  review our product.
-- We review our SDP to meet our final product.
+- We discuss our PowerPoint presentation.
+- We  discuss our final product.
+- We discuss the review of SDP to meet our final product.
 
 ## Action Items
-- We should meet on 4/3 to finalize our PowerPoint presentation.
-- We should review our product.
-- We should review our SDP to meet our final product.
+- We should work on our MVP, due 4/8.
+- We should meet on Monday to practice our presentation.
+- The organization of the presentation is as follows:-
+  - Jahcorian Ivery -> Introduction, outline, Elevator Speech, and Income/expense page
+  - Varshitha Thanam -> Requirement and Budget page
+  - Hana Tollossa -> Architect
+  - Alexander Hooper -> 
+ 
+  
+  
 ## Questions or Concerns
 
 ## Signatures  
