--- a/deliverables/meeting-minutes/04-04-24.md
+++ b/deliverables/meeting-minutes/04-04-24.md
@@ -18,8 +18,9 @@
 - The organization of the presentation is as follows:-
   - Jahcorian Ivery -> Introduction, outline, Elevator Speech, and Income/expense page
   - Varshitha Thanam -> Requirement and Budget page
-  - Hana Tollossa -> Architect
-  - Alexander Hooper -> 
+  - Hana Tollossa -> Architect and Home Page
+  - Ethan Timpe -> Entity Relationship Diagram, create Page, Login page, and Account Page 
+  - Alexander Hooper -> Goal page and Conclusion
  
   
   
@@ -27,6 +28,5 @@
 
 ## Signatures  
 - Hana Tollossa
-- Varshitha Thanam
-- Ethan Timpe
+
 
